--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1>
-    Welcome to Dating App
-  </h1>
-  <app-value></app-value>
-</div>
+<app-navbar></app-navbar>
+<h1>
+  Welcome to Dating App
+</h1>
+<app-value></app-value>
