--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,6 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
-<h1>
-  Welcome to Dating App
-</h1>
-<app-value></app-value>
+<app-home></app-home>
