--- a/DatingApp-SPA/src/app/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/navbar/navbar.component.html
@@ -10,10 +10,27 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Messages</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#" (click)="logOut()">LogOut</a>
+    </li>
   </ul>
-  <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+
+  <div *ngIf="isLoggedIn()" class="dropdown text-light">
+    <a class="dropdown-toggle">
+      Welcome User
+    </a>
+
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>LogOut</a>
+    </div>
+  </div>
+
+  <form *ngIf="!isLoggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
     <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username" [(ngModel)]="model.username">
-    <input class="form-control mr-sm-2" type="text" name="password" required placeholder="Password" [(ngModel)]="model.password">
+    <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password" [(ngModel)]="model.password">
     <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
   </form>
+
 </nav>
