--- a/DatingApp-SPA/src/app/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/navbar/navbar.component.html
@@ -1,56 +1,57 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">DatingApp</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active"><a class="nav-link" href="#">Matches </a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Lists</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
-    <li class="nav-item">
-      <a class="nav-link" href="#" (click)="logOut()">LogOut</a>
-    </li>
-  </ul>
+  <div class="container">
+    <a class="navbar-brand" href="#">DatingApp</a>
+    <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
+      <li class="nav-item active"><a class="nav-link" href="#">Matches </a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Lists</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
+    </ul>
 
-  <div *ngIf="isLoggedIn()" class="dropdown text-light">
-    <a class="dropdown-toggle">
-      Welcome {{ authService.decodedToken?.unique_name | titlecase }}
-    </a>
+    <div *ngIf="isLoggedIn()" class="dropdown text-light" dropdown>
+      <a class="dropdown-toggle" dropdownToggle>
+        Welcome {{ authService.decodedToken?.unique_name | titlecase }}
+      </a>
 
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#"
-        ><i class="fa fa-user"></i>Edit Profile</a
-      >
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>LogOut</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" href="#"
+          ><i class="fa fa-user"></i>Edit Profile</a
+        >
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="logOut()"
+          ><i class="fa fa-sign-out"></i>LogOut</a
+        >
+      </div>
     </div>
-  </div>
 
-  <form
-    *ngIf="!isLoggedIn()"
-    #loginForm="ngForm"
-    class="form-inline my-2 my-lg-0"
-    (ngSubmit)="login()"
-  >
-    <input
-      class="form-control mr-sm-2"
-      type="text"
-      name="username"
-      required
-      placeholder="Username"
-      [(ngModel)]="model.username"
-    />
-    <input
-      class="form-control mr-sm-2"
-      type="password"
-      name="password"
-      required
-      placeholder="Password"
-      [(ngModel)]="model.password"
-    />
-    <button
-      [disabled]="!loginForm.valid"
-      class="btn btn-success my-2 my-sm-0"
-      type="submit"
+    <form
+      *ngIf="!isLoggedIn()"
+      #loginForm="ngForm"
+      class="form-inline my-2 my-lg-0"
+      (ngSubmit)="login()"
     >
-      Login
-    </button>
-  </form>
+      <input
+        class="form-control mr-sm-2"
+        type="text"
+        name="username"
+        required
+        placeholder="Username"
+        [(ngModel)]="model.username"
+      />
+      <input
+        class="form-control mr-sm-2"
+        type="password"
+        name="password"
+        required
+        placeholder="Password"
+        [(ngModel)]="model.password"
+      />
+      <button
+        [disabled]="!loginForm.valid"
+        class="btn btn-success my-2 my-sm-0"
+        type="submit"
+      >
+        Login
+      </button>
+    </form>
+  </div>
 </nav>
