--- a/DatingApp-SPA/src/app/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
     <a class="navbar-brand" href="#">DatingApp</a>
     <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
