--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-4">
   <div class="row">
+    <h1>{{ user.knownAs }}'s Profile</h1>
+  </div>
+  <div class="row">
     <div class="col-sm-4">
       <div class="card">
         <img
@@ -46,7 +49,14 @@
             <h4>Interests</h4>
             <p>{{ user.interests }}</p>
           </tab>
-          <tab heading="Photos"> <p>Photos will go here</p> </tab>
+          <tab heading="Photos">
+            <p>
+              <ngx-gallery
+                [options]="galleryOptions"
+                [images]="galleryImages"
+              ></ngx-gallery>
+            </p>
+          </tab>
           <tab heading="Messages"> <p>Messages will go here</p> </tab>
         </tabset>
       </div>
