Added Photo Upload component in Member Edit component

--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -91,7 +91,7 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>You can edit your photos from here.</p>
+            <app-photo-editor [photos]="user.photos"></app-photo-editor>
           </tab>
         </tabset>
       </div>
