--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -1,17 +1,107 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign Up</h2>
-  <hr>
+  <hr />
 
   <div class="form-group">
-    <input type="text" class="form-control" required name='username' [(ngModel)]="model.username" placeholder="Username">
+    <input
+      type="text"
+      class="form-control"
+      [ngClass]="{
+        'is-invalid':
+          registerForm.get('username').errors &&
+          registerForm.get('username').touched
+      }"
+      required
+      formControlName="username"
+      placeholder="Username"
+    />
+    <div class="invalid-feedback">Please choose a username</div>
   </div>
 
   <div class="form-group">
-    <input type="password" class="form-control" required name="password" [(ngModel)]="model.password" placeholder="Password">
+    <input
+      type="password"
+      class="form-control"
+      [ngClass]="{
+        'is-invalid':
+          registerForm.get('password').touched &&
+          registerForm.get('password').errors
+      }"
+      required
+      formControlName="password"
+      placeholder="Password"
+    />
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.get('password').touched &&
+        registerForm.get('password').hasError('required')
+      "
+    >
+      Password is required
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.get('password').touched &&
+        registerForm.get('password').hasError('minlength')
+      "
+    >
+      Password should be minimum 4 characters
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.get('password').touched &&
+        registerForm.get('password').hasError('maxlength')
+      "
+    >
+      Password can not exceed 8 characters
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input
+      type="password"
+      class="form-control"
+      [ngClass]="{
+        'is-invalid':
+          (registerForm.get('confirmPassword').touched &&
+            registerForm.get('confirmPassword').errors) ||
+          (registerForm.get('confirmPassword').touched &&
+            registerForm.hasError('mismatch'))
+      }"
+      required
+      formControlName="confirmPassword"
+      placeholder="Confirm Password"
+    />
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.get('confirmPassword').touched &&
+        registerForm.get('confirmPassword').hasError('required')
+      "
+    >
+      Password is required
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.get('confirmPassword').touched &&
+        registerForm.hasError('mismatch')
+      "
+    >
+      Passwords must match
+    </div>
   </div>
 
   <div class="form-group text-center">
     <button class="btn btn-success mr-2" type="submit">Register</button>
-    <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+    <button class="btn btn-default" type="button" (click)="cancel()">
+      Cancel
+    </button>
   </div>
 </form>
+
+<p>Form Value: {{ registerForm.value | json }}</p>
+<p>Form Value: {{ registerForm.status | json }}</p>
