--- a/DatingApp-SPA/src/app/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/navbar/navbar.component.html
@@ -14,7 +14,9 @@
     </ul>
 
     <div *ngIf="isLoggedIn()" class="dropdown text-light" dropdown>
-      <span class="mr-2"> <img src="{{photoUrl}}" alt="" /> </span>
+      <span class="mr-2">
+        <img src="{{photoUrl || '../assets/user.png'}}" alt="" />
+      </span>
       <a class="dropdown-toggle" dropdownToggle>
         Welcome {{ authService.decodedToken?.unique_name | titlecase }}
       </a>
